--- a/api/depSchedule.yml
+++ b/api/depSchedule.yml
@@ -766,6 +766,7 @@ components:
     UnitBaseReq:
       required:
         - title
+        - calendarId
       properties:
         title:
           type: string
@@ -778,6 +779,10 @@ components:
           type: boolean
           default: false
           description: "Планируемое подразделение? (true/false)"
+        calendarId:
+          type: integer
+          format: int64
+          description: "Ссылка на календарь"
         parentId:
           type: integer
           format: int64
@@ -829,6 +834,7 @@ components:
       required:
         - unitId
         - title
+        - calendarId
       allOf:
         - $ref: "#/components/schemas/UnitBaseReq"
         - properties:
