--- a/api/depSchedule.yml
+++ b/api/depSchedule.yml
@@ -245,6 +245,13 @@ paths:
       summary: Список подразделений
       tags:
         - unit
+      parameters:
+        - name: calendarId
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int64
       responses:
         200:
           description: Array of unit
@@ -334,6 +341,12 @@ paths:
       tags:
         - unit
       parameters:
+        - name: calendarId
+          in: query
+          required: true
+          schema:
+            type: integer
+            format: int64
         - name: dateFrom
           in: query
           required: true
