--- a/api/depSchedule.yml
+++ b/api/depSchedule.yml
@@ -902,6 +902,7 @@ components:
         - unitId
         - location
         - planned
+        - calendarId
       properties:
         unitId:
           type: integer
@@ -927,6 +928,10 @@ components:
           description: "Примечание"
         eventTypeId:
           $ref: "#/components/schemas/EventTypeId"
+        calendarId:
+          type: integer
+          format: int64
+          description: "Ссылка на календарь"
     EventPut:
       allOf:
         - $ref: "#/components/schemas/EventBase"
@@ -941,6 +946,7 @@ components:
         - unitId
         - location
         - planned
+        - calendarId
       properties:
         eventId:
           type: integer
@@ -966,6 +972,10 @@ components:
           description: "Примечание"
         eventTypeDescription:
           $ref: "#/components/schemas/EventTypeDescription"
+        calendarId:
+          type: integer
+          format: int64
+          description: "Ссылка на календарь"
     EventResponse:
       required:
         - eventId
@@ -1042,6 +1052,7 @@ components:
         - name
         - startDate
         - endDate
+        - calendarId
       properties:
         name:
           type: string
@@ -1052,6 +1063,10 @@ components:
         endDate:
           type: string
           format: date
+        calendarId:
+          type: integer
+          format: int64
+          description: "Ссылка на календарь"
     PeriodResponse:
       required:
         - periodId
