--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -51,9 +51,10 @@ spring:
     username: sa
     password:
   jpa:
-    hibernate.ddl-auto: create-drop
+    hibernate.ddl-auto: validate
   liquibase:
-    enabled: false
+    enabled: true
+    change-log: classpath:db/migrations/test_changelog.xml
     
 server.port: 8080
 
