--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -12,6 +12,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "global": "^4.4.0",
+    "history": "^4.10.1",
     "json-server": "^0.15.0",
     "lodash": "^4.17.13",
     "node-sass": "^4.12.0",
@@ -20,11 +21,17 @@
     "react-color": "^2.17.3",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.0.1",
     "react-test-renderer": "^16.8.6",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
