--- a/schedule_ui/package.json
+++ b/schedule_ui/package.json
@@ -31,7 +31,8 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.1"
+    "redux-saga": "^1.1.1",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
